--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,123 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('@mdi/light-font/css/materialdesignicons-light.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+:root {
+	--font-body: 'Lato', sans-serif;
+	--font-editor: 'Inconsolata', monospace;
+	--color-bg-0: #3d3d3d;
+	--color-bg-1:  #2b2b2b;
+	--color-bg-2: #1e1e1e;
+	--color-selected-border: rgb(76, 237, 76);
+	--color-selected-bg: rgba(10, 172, 10, 0.036);
+	--color-danger-border: rgb(255, 99, 99);
+	--color-danger-bg: rgba(255, 0, 0, 0.305);
+	--color-warning-border: rgb(255, 190, 99);
+	--color-warning-bg: rgba(255, 221, 0, 0.305);
+	--color-text: white;
+	--column-width: 42rem;
+	--column-margin-top: 4rem;
+	font-family: var(--font-body);
+	color: var(--color-text);
+}
+
+* {
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	max-width: 100%;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+::selection {
+	background: #777777;
+	line-height: 16px;
+}
+
+app-root {
+	min-height: 100vh;
+	display: flex;
+}
+
+app-editor {
+	min-height: 100vh;
+}
+
+body {
+	background-color: var(--color-bg-1);
+	margin: 0;
+	min-height: 100vh;
+}
+
+h1,
+h2,
+p {
+	font-weight: 400;
+}
+
+p {
+	line-height: 1.5;
+}
+
+a {
+	color: var(--color-theme-1);
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+input,
+button {
+	font-size: inherit;
+	font-family: inherit;
+}
+
+.visually-hidden {
+	border: 0;
+	clip: rect(0 0 0 0);
+	height: auto;
+	margin: 0;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	white-space: nowrap;
+}
+
+.default-button {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	gap: 25px;
+	background-color: rgb(46, 46, 46);
+	padding: 10px 30px;
+	border: 1px solid transparent;
+	border-radius: 6px;
+	color: white;
+	transition: .2s;
+	cursor: pointer;
+	font-size: .875em;
+}
+
+.default-button:hover {
+	border: 1px solid white;
+}
